--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--
    main.html
    
-   Copyright 2017 isaac <isaac@Isaac-S10>
+   Copyright 2017 Isaac Quiroz <isaac.qa13@gmail.com>
    
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
