--- a/index.html
+++ b/index.html
@@ -36,10 +36,17 @@
 <td class="table1">	
 <table id="table2">
 <tr>
-<td class="pantalla" colspan="6"><p>Introduzca la cantidad que desea retirar:</p><p id="ph2">0,00</p></td>
+	<td><input type="button"/></td>
+	<td class="pantalla" rowspan="4" colspan="6"><p>Introduzca la cantidad que desea retirar:</p><p id="ph2">0,00</p></td>
+	<td><input type="button"/></td>
 </tr>
+<tr><td><input type="button"/></td><td><input type="button"/></td></tr>
+<tr><td><input type="button"/></td><td><input type="button"/></td></tr>
+<tr><td><input type="button"/></td><td><input type="button"/></td></tr>
+
 <tr>
-<td><input type='button' id='buttonh1' value="1"/></td><td><input type='button' id='buttonh2' value="2"/></td><td><input type='button' id='buttonh3' value="3"/></td><td><input type='button' id='buttonhb' value="Borrar"/></td><td class="b" rowspan="4" colspan="2"><p id='ph1'>Billetes<br/></p></td>
+<td rowspan="4" class="vacia"></td>
+<td><input type='button' id='buttonh1' value="1"/></td><td><input type='button' id='buttonh2' value="2"/></td><td><input type='button' id='buttonh3' value="3"/></td><td><input type='button' id='buttonhb' value="Borrar"/></td><td class="b" rowspan="4" colspan="2"><p id='ph1'>Billetes<br/></p></td><td rowspan="4" class="vacia"></td>
 </tr>
 <tr>
 <td><input type='button' id='buttonh4' value="4"/></td><td><input type='button' id='buttonh5' value="5"/></td><td><input type='button' id='buttonh6' value="6"/></td><td><input type='button' id='buttonhc' value="Cancelar"/></td>
