--- a/index.html
+++ b/index.html
@@ -36,13 +36,23 @@
 <td class="table1">	
 <table id="table2">
 <tr>
-	<td><input type="button"/></td>
-	<td class="pantalla" rowspan="4" colspan="6"><p>Introduzca la cantidad que desea retirar:</p><p id="ph2">0,00</p></td>
-	<td><input type="button"/></td>
+	<td><input type="button" id="buttonI1"/></td>
+	<td class="pantalla" rowspan="4" colspan="6">
+	<table id='tableP'class='vacia'>
+	<tr><td class='vacia'></td>
+	<td class="vacia" rowspan='4' colspan='2'><p>Introduzca la cantidad que desea retirar:</p><p id="ph2">0,00</p></td>
+	<td class='vacia'></td>
+	</tr>
+	<tr><td class='vacia'></td><td class='vacia'></td></tr>
+	<tr><td class='vacia'></td><td class='vacia'></td></tr>
+	<tr><td class='vacia'></td><td class='vacia'></td></tr>
+	</table>
+	</td>
+	<td><input type="button" id="buttonD1"/></td>
 </tr>
-<tr><td><input type="button"/></td><td><input type="button"/></td></tr>
-<tr><td><input type="button"/></td><td><input type="button"/></td></tr>
-<tr><td><input type="button"/></td><td><input type="button"/></td></tr>
+<tr><td><input type="button" id="buttonI2"/></td><td><input type="button" id="buttonD2"/></td></tr>
+<tr><td><input type="button" id="buttonI3"/></td><td><input type="button" id="buttonD3"/></td></tr>
+<tr><td><input type="button" id="buttonI4"/></td><td><input type="button" id="buttonD4"/></td></tr>
 
 <tr>
 <td rowspan="4" class="vacia"></td>
